feat: added search for category
