# src/router/products.ts
@@ -1,5 +1,6 @@
 import { Router } from 'express';
 import getProducts from '../business/rules/get-products';
+import getProductsByCategory from '../business/rules/get-products-by-category';
 
 const productRouter = Router();
 productRouter.get('/v1/supermarkets/:cep/products', async (req, res, next) => {
@@ -29,6 +30,39 @@ productRouter.get('/v1/supermarkets/:cep/products', async (req, res, next) => {
 
   try {
     const response = await getProducts(cep, servicesUrl, name?.toString());
+    res.status(200).json(response);
+    return next();
+  } catch (error) {
+    return next(error);
+  }
+});
+
+productRouter.get('/v1/supermarkets/:cep/products/categories/:type/:category', async (req, res, next) => {
+  const { cep, type, category } = req.params;
+  const {
+    config: {
+      services: {
+        supermarket: {
+          url: supermarketUrl,
+        },
+        product: {
+          url: productUrl,
+        },
+        price: {
+          url: priceUrl,
+        },
+      },
+    },
+  } = res.app.locals;
+
+  const servicesUrl = {
+    supermarketUrl,
+    productUrl,
+    priceUrl,
+  };
+
+  try {
+    const response = await getProductsByCategory(cep, type, category, servicesUrl);
     res.status(200).json(response);
     return next();
   } catch (error) {
